--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT ='3000'
-MONGO_URI='mongodb+srv://daffatabianoo:Daffatabiano14@cluster0.mrv4i.mongodb.net/'
+MONGO_URI='mongodb+srv://daffatabianoo:Daffatabiano14@cluster0.mrv4i.mongodb.net/test'
 JWT_SECRET='Daffa Tabiano'
