--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT ='3000'
 MONGO_URI='mongodb+srv://daffatabianoo:Daffatabiano14@cluster0.mrv4i.mongodb.net/test'
 JWT_SECRET='Daffa Tabiano'
-CLIENT_URL='https://devmernstack-commerce.vercel.app/api/v1'
+CLIENT_URL='https://mernstack-clientside.vercel.app'
