--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "twilio": "^5.4.0"
   }
 }
