--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "twilio": "^5.4.0"
   }
