--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1",
     "twilio": "^5.4.0"
   }
 }
