--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
+    "http": "^0.0.1-security",
+    "io": "^1.5.3",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "twilio": "^5.4.0"
   }
 }
